--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-numpy==1.24.1
-opencv-python==4.8.1.78
-sqlalchemy==2.0.23
-torch==2.1.0+cu121
-torchaudio==2.1.0+cu121
-torchvision==0.16.0+cu121
-ultralytics==8.0.199
+bcrypt
+customtkinter
+darkdetect
+greenlet
+numpy
+opencv-python
+packaging
+Pillow
+SQLAlchemy
+typing_extensions
+ultralytics
+pygrabber
